@@ -20,19 +20,35 @@ module Jerbil
   
   module Chuser
     
-    # change the current user and group to the one specified, if possible
+    # change the current user  to the one specified, if possible
     # returns true if it worked, false otherwise
-    def self.change(user)
+    def self.change_user(user)
       return false unless user # may not be a user to change to
       return false unless Process.uid == 0 # not root so cannot change anyway
       new_user = Etc.getpwnam(user)
       new_uid = new_user.uid
+            
+      Process::Sys.setuid(new_uid)
+      return true
+    rescue ArgumentError
+      # no such user, so ignore it
+      return false
+    rescue Errno::EPERM
+      # did not have permission to change user
+      return false
+    end
+    
+    # change the current user and group to the one specified, if possible
+    # returns true if it worked, false otherwise
+    def self.change_group(gp)
+      return false unless gp # may not be a user to change to
+      return false unless Process.uid == 0 # not root so cannot change anyway
+      new_user = Etc.getgrnam(user)
       new_gid = new_user.gid
       
       # change group first, while still root!
       Process::Sys.setgid(new_gid)
-      
-      Process::Sys.setuid(new_uid)
+
       return true
     rescue ArgumentError
       # no such user, so ignore it
