@@ -1,14 +1,13 @@
 # Created by Jevoom
 #
 # 17-Aug-2012
-#     Silently ignore register remote and remove remote if the key is invalid to allow 
-#     co-existence with pre-1.0 versions
+#     Provide a separate group parameter cos changing user does not do all the groups
 
 module Jerbil
-  # version set to 1.0.4
-  Version = '1.0.4'
+  # version set to 1.0.5
+  Version = '1.0.5'
   # date set to 17-Aug-2012
   Version_Date = '17-Aug-2012'
-  #ident string set to: jerbil-1.0.4 17-Aug-2012
-  Ident = 'jerbil-1.0.4 17-Aug-2012'
+  #ident string set to: jerbil-1.0.5 17-Aug-2012
+  Ident = 'jerbil-1.0.5 17-Aug-2012'
 end
